# system-monitor

./: .clang-format  CMakeLists.txt
smfanctld/: Cargo.toml
smfanctld/src/: dmi.rs  libc_wrappers.rs  main.rs  utils.rs
src/: draw_app.cpp  draw_app.hpp  humanize.cpp  humanize.hpp  main.cpp  network.cpp  network.hpp  processes.cpp  processes.hpp  refresh_data.cpp  refresh_data.hpp  seguiemj.font.hpp  storage.cpp  storage.hpp  system.cpp  system.hpp  utilities.cpp  utilities.hpp
src/imgui/: imconfig.h
