[package]
name = "smfanctld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
lazy_static = "1.4.0"
log   = "0.4"
nix = "0.26.2"
procfs = "0.15.1"
regex = "1.8.1"
simple_logger = "4.1.0"
thiserror = "1.0.40"
timer = "0.2.0"
